@@ -26,6 +26,7 @@
 - fix get_query_dn not looking in subtree for LDAP search (missed second
   occurance).
 - allow additional common LDAP attributes in map dn.
+- deal with changed semantics of mkdir in 2.6.19.
 
 1/9/2006 autofs-5.0.1 rc2
 -------------------------
